--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="3D Gaussian Splatting with Deferred Reflection">
+        content="GRAZPEDWRI-DX Dataset (Split By Ju)">
   <meta name="keywords" content="XXX, XXX">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>3D Gaussian Splatting with Deferred Reflection</title>
