--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -4,9 +4,9 @@
   <meta charset="utf-8">
   <meta name="description"
         content="GRAZPEDWRI-DX Dataset (Split By Ju)">
-  <meta name="keywords" content="XXX, XXX">
+  <meta name="keywords" content="GRAZPEDWRI-DX, Dataset, Ju">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>3D Gaussian Splatting with Deferred Reflection</title>
+  <title>GRAZPEDWRI-DX Dataset (Split By Ju)</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
