--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -58,8 +58,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title" style="font-weight: 600;">3D Gaussian Splatting with Deferred Reflection</h1>
-          <h1 style="font-size:1.5rem; color:#6e6e6e; font-weight: 550;"> ACM SIGGRAPH 2024<br></h1>
+          <h1 class="title is-1 publication-title" style="font-weight: 600;">GRAZPEDWRI-DX Dataset (Split By Ju)</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               Keyang Ye</span> &nbsp;&nbsp;&nbsp;
@@ -118,70 +117,6 @@
             </div>
 
           </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-<section class="hero is-light is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-        <div class="item item-ball">
-          <video poster="" id="ball" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/ball.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-cat">
-          <video poster="" id="cat" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/cat.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-car">
-          <video poster="" id="car" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/car.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-bell">
-          <video poster="" id="bell" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/bell.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-teapot">
-          <video poster="" id="teapot" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/toaster.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-helmet">
-          <video poster="" id="helmet" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/helmet.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-coffee">
-          <video poster="" id="coffee" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/coffee.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-sedan">
-          <video poster="" id="sedan" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/sedan.mp4"
-                    type="video/mp4">
-          </video>
-        </div>
-        <div class="item item-toycar">
-          <video poster="" id="toycar" autoplay controls muted loop playsinline height="100%">
-            <source src="./static/videos/toycar.mp4"
-                    type="video/mp4">
-          </video>
         </div>
       </div>
     </div>
