--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -61,11 +61,7 @@
           <h1 class="title is-1 publication-title" style="font-weight: 600;">GRAZPEDWRI-DX Dataset (Split By Ju)</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              Keyang Ye</span> &nbsp;&nbsp;&nbsp;
-            <span class="author-block">
-              <a href="https://www.houqiming.net/">Qiming Hou</a></span> &nbsp;&nbsp;&nbsp;
-            <span class="author-block">
-              <a href="http://www.kunzhou.net/">Kun Zhou</a>
+              <a href="https://ruiyangju.github.io/">Rui-Yang Ju</a>
             </span>
           </div>
 
