--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -66,14 +66,14 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block">State Key Lab of CAD & CG, Zhejiang University</span>
+            <span class="author-block">National Taiwan University</span>
           </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href="static\pdf\3DGS_DR.pdf"
+                <a href="static\pdf\SR.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
