--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -115,10 +115,10 @@
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Abstract</h2>
+        <h2 class="title is-3">Description</h2>
         <div class="content has-text-justified">
           <p>
-            GRAZPEDWRI-DX [1] is a public dataset of 20,327 pediatric wrist 
+            GRAZPEDWRI-DX [Nagy et al. 2022] is a public dataset of 20,327 pediatric wrist 
             trauma X-ray images released by the University of Medicine of Graz. 
             These X-ray images were collected by multiple pediatric radiologists 
             at the Department for Pediatric Surgery of the University Hospital Graz 
