--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -343,7 +343,7 @@
 
     <div class="columns is-centered">
       <div class="column is-full-width">
-        <h2 class="title is-3">References</h2>
+        <h2 class="title is-3">Reference</h2>
 
         <!-- Prop. -->
         <div class="content has-text-justified">
@@ -360,12 +360,14 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{ye2024gsdr,
+    If you use our split dataset, please cite the following paper:
+    <pre><code>
+      @article{ye2024gsdr,
   author    = {Keyang, Ye and Qiming, Hou and Kun, Zhou},
   title     = {3D Gaussian Splatting with Deferred Reflection},
   booktitle  = {ACM SIGGRAPH Conference Proceedings, Denver, CO, United States, July 28 - August 1, 2024},
-  year      = {2024},
-}</code></pre>
+  year      = {2024},}
+    </code></pre>
   </div>
 </section>
 
