--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -362,11 +362,15 @@
     <h2 class="title">BibTeX</h2>
     If you use our split dataset, please cite the following paper:
     <pre><code>
-      @article{ye2024gsdr,
-  author    = {Keyang, Ye and Qiming, Hou and Kun, Zhou},
-  title     = {3D Gaussian Splatting with Deferred Reflection},
-  booktitle  = {ACM SIGGRAPH Conference Proceedings, Denver, CO, United States, July 28 - August 1, 2024},
-  year      = {2024},}
+      @article{ju2023fracture,
+        title={Fracture detection in pediatric wrist trauma X-ray images using YOLOv8 algorithm},
+        author={Ju, Rui-Yang and Cai, Weiming},
+        journal={Scientific Reports},
+        volume={13},
+        number={1},
+        pages={20077},
+        year={2023}
+      }
     </code></pre>
   </div>
 </section>
