--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -362,15 +362,47 @@
     <h2 class="title">BibTeX</h2>
     If you use our split dataset, please cite the following paper:
     <pre><code>
-      @article{ju2023fracture,
-        title={Fracture detection in pediatric wrist trauma X-ray images using YOLOv8 algorithm},
-        author={Ju, Rui-Yang and Cai, Weiming},
-        journal={Scientific Reports},
-        volume={13},
-        number={1},
-        pages={20077},
-        year={2023}
-      }
+    @article{ju2023fracture,
+      title={Fracture detection in pediatric wrist trauma X-ray images using YOLOv8 algorithm},
+      author={Ju, Rui-Yang and Cai, Weiming},
+      journal={Scientific Reports},
+      volume={13},
+      number={1},
+      pages={20077},
+      year={2023}
+    }
+    
+    @article{chien2024yolov9,
+      title={YOLOv9 for fracture detection in pediatric wrist trauma X-ray images},
+      author={Chien, Chun-Tse and Ju, Rui-Yang and Chou, Kuang-Yi and Chiang, Jen-Shiun},
+      journal={Electronics Letters},
+      volume={60},
+      number={11},
+      pages={e13248},
+      year={2024}
+    }
+
+      @article{chien2402yolov8,
+      title={YOLOv8-AM: YOLOv8 with Attention Mechanisms for Pediatric Wrist Fracture Detection},
+      author={Chien, CT and Ju, RY and Chou, KY and Lin, CS and Chiang, JS},
+      journal={arXiv preprint arXiv:2402.09329},
+      year={2024}
+      
+    }
+
+      @article{ju2024yolov8,
+      title={Yolov8-rescbam: Yolov8 based on an effective attention module for pediatric wrist fracture detection},
+      author={Ju, Rui-Yang and Chien, Chun-Tse and Chiang, Jen-Shiun},
+      journal={arXiv preprint arXiv:2409.18826},
+      year={2024}
+    }
+
+      @article{ju2024pediatric,
+      title={Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images},
+      author={Ju, Rui-Yang and Chien, Chun-Tse and Xieerke, Enkaer and Chiang, Jen-Shiun},
+      journal={arXiv preprint arXiv:2410.01031},
+      year={2024}
+    }
     </code></pre>
   </div>
 </section>
