--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -382,12 +382,11 @@
       year={2024}
     }
 
-      @article{chien2402yolov8,
-      title={YOLOv8-AM: YOLOv8 with Attention Mechanisms for Pediatric Wrist Fracture Detection},
-      author={Chien, CT and Ju, RY and Chou, KY and Lin, CS and Chiang, JS},
+    @article{chien2024yolov8,
+      title={Yolov8-am: Yolov8 with attention mechanisms for pediatric wrist fracture detection},
+      author={Chien, Chun-Tse and Ju, Rui-Yang and Chou, Kuang-Yi and Lin, Chien-Sheng and Chiang, Jen-Shiun},
       journal={arXiv preprint arXiv:2402.09329},
       year={2024}
-      
     }
 
       @article{ju2024yolov8,
