--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -100,6 +100,16 @@
                   <span>Code</span>
                   </a>
               </span>
+              <!-- Download Link. -->
+              <span class="link-block">
+                <a href="https://1drv.ms/u/s!Ap6uuRvdVcJWbQfOvTHl5hMuA5o?e=gLPEfR"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-download"></i>
+                  </span>
+                  <span>Download</span>
+                  </a>
+              </span>
             </div>
 
           </div>
