--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -122,10 +122,10 @@
 
 <section class="section">
   <div class="container is-max-desktop">
-    <!-- Abstract. -->
+    <!-- Original Dataset. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Description</h2>
+        <h2 class="title is-3">Original Dataset</h2>
         <div class="content has-text-justified">
           <p>
             GRAZPEDWRI-DX [Nagy et al. 2022] is a public dataset of 20,327 pediatric wrist 
@@ -139,7 +139,26 @@
         </div>
       </div>
     </div>
-    <!--/ Abstract. -->
+    <!--/ Original Dataset. -->
+
+    <!-- Splitting Strategy. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">Splitting Strategy</h2>
+        <div class="content has-text-justified">
+          <p>
+            GRAZPEDWRI-DX [Nagy et al. 2022] is a public dataset of 20,327 pediatric wrist 
+            trauma X-ray images released by the University of Medicine of Graz. 
+            These X-ray images were collected by multiple pediatric radiologists 
+            at the Department for Pediatric Surgery of the University Hospital Graz 
+            between 2008 and 2018, involving 6,091 patients and a total of 10,643 
+            studies. This dataset is annotated with 74,459 image labels, featuring 
+            a total of 67,771 labeled objects.
+          </p>
+        </div>
+      </div>
+    </div>
+    <!--/ Splitting Strategy. -->
 
     <!-- Paper video. -->
     <div class="columns is-centered has-text-centered">
