--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -147,13 +147,11 @@
         <h2 class="title is-3">Splitting Strategy</h2>
         <div class="content has-text-justified">
           <p>
-            GRAZPEDWRI-DX [Nagy et al. 2022] is a public dataset of 20,327 pediatric wrist 
-            trauma X-ray images released by the University of Medicine of Graz. 
-            These X-ray images were collected by multiple pediatric radiologists 
-            at the Department for Pediatric Surgery of the University Hospital Graz 
-            between 2008 and 2018, involving 6,091 patients and a total of 10,643 
-            studies. This dataset is annotated with 74,459 image labels, featuring 
-            a total of 67,771 labeled objects.
+          We divide the GRAZPEDWRI-DX dataset ran- domly into three sets: training set, 
+          validation set, and test set. The sizes of these sets are approximately 70%, 
+          20%, and 10% of the original dataset, respectively. Specifically, our training 
+          set consists of 14,204 images (69.88%), our validation set consists of 4,094 
+          images (20.14%), and our test set consists of 2029 images (9.98%). 
           </p>
         </div>
       </div>
