--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -134,7 +134,8 @@
             at the Department for Pediatric Surgery of the University Hospital Graz 
             between 2008 and 2018, involving 6,091 patients and a total of 10,643 
             studies. This dataset is annotated with 74,459 image labels, featuring 
-            a total of 67,771 labeled objects.
+            a total of 67,771 labeled objects. You can find the original GRAZPEDWRI-DX 
+            dataset [here](https://figshare.com/articles/dataset/GRAZPEDWRI-DX/14825193) (unsplit).
           </p>
         </div>
       </div>
