--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -135,7 +135,7 @@
             between 2008 and 2018, involving 6,091 patients and a total of 10,643 
             studies. This dataset is annotated with 74,459 image labels, featuring 
             a total of 67,771 labeled objects. You can find the original GRAZPEDWRI-DX dataset 
-            <a href="https://figshare.com/articles/dataset/GRAZPEDWRI-DX/14825193" target="_blank">here</a> (unsplit).
+            <a href="https://figshare.com/articles/dataset/GRAZPEDWRI-DX/14825193" target="_blank"><strong>here</strong></a> (unsplit).
           </p>
         </div>
       </div>
