--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -138,6 +138,10 @@
             <a href="https://figshare.com/articles/dataset/GRAZPEDWRI-DX/14825193" target="_blank"><strong>here</strong></a> (unsplit).
           </p>
         </div>
+
+        <div class="content has-text-centered">
+          <img src="./images/intro.png" class="center">
+        </div>
       </div>
     </div>
     <!--/ Original Dataset. -->
@@ -159,16 +163,16 @@
     </div>
     <!--/ Splitting Strategy. -->
 
-    <!-- Paper video. -->
+    <!-- Intro. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Video</h2>
-        <div class="publication-video">
+        <h2 class="title is-3">Image</h2>
+        <div class="intro">
           <iframe width="1210" height="681" src="https://www.youtube.com/embed/3SsQZNXQBs8" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
       </div>
     </div>
-    <!--/ Paper video. -->
+    <!--/ Intro. -->
   </div>
 </section>
 
