--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -163,18 +163,18 @@
     </div>
     <!--/ Splitting Strategy. -->
 
-    <!-- Intro. -->
+<section class="section">
+  <div class="container is-max-desktop">
+    <!-- Application. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Image</h2>
-        <div class="intro">
-          <iframe width="1210" height="681" src="https://www.youtube.com/embed/3SsQZNXQBs8" title="" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <h2 class="title is-3">Application</h2>
+        <div class="content has-text-centered">
+          <img src="./images/application.png" class="center">
         </div>
       </div>
     </div>
-    <!--/ Intro. -->
-  </div>
-</section>
+    <!--/ Application. -->
 
 <section class="section">
   <div class="container is-max-desktop">
