--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -198,7 +198,7 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    If you use our split dataset, please cite the following paper:
+    <strong>If you use our split dataset, please cite the following paper:</strong>
     
     <pre><code>
     @article{ju2023fracture,
