--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -102,7 +102,7 @@
               </span>
               <!-- Dataset Link. -->
               <span class="link-block">
-                <a href="https://1drv.ms/u/s!Ap6uuRvdVcJWbQfOvTHl5hMuA5o?e=gLPEfR"
+                <a href="https://1drv.ms/u/s!Ap6uuRvdVcJWbXtfIFYUvzOMKXQ"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-download"></i>
