--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -152,7 +152,7 @@
         <h2 class="title is-3">Splitting Strategy</h2>
         <div class="content has-text-justified">
           <p>
-          We divide the GRAZPEDWRI-DX dataset ran- domly into three sets: training set, 
+          In [Ju et al. 2023], we first divide the GRAZPEDWRI-DX dataset ran- domly into three sets: training set, 
           validation set, and test set. The sizes of these sets are approximately 70%, 
           20%, and 10% of the original dataset, respectively. Specifically, our training 
           set consists of 14,204 images (69.88%), our validation set consists of 4,094 
@@ -188,6 +188,10 @@
           <p>
             [Nagy et al. 2022] Eszter Nagy, Michael Janisch, Franko Hržić, Erich Sorantin, Sebastian Tschauner. 2022.
             A pediatric wrist trauma X-ray dataset (GRAZPEDWRI-DX) for machine learning. Scientific Data.
+          </p>
+          <p>
+            [Ju et al. 2023] Rui-Yang Ju, Weiming Cai. 2023.
+            Fracture detection in pediatric wrist trauma X-ray images using YOLOv8 algorithm. Scientific Reports.
           </p>
         </div>
 
