--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -202,7 +202,7 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <strong>If you use our split dataset, please cite the following paper:</strong>
+    <strong>If you use our split dataset, please cite some of the papers below:</strong>
     
     <pre><code>
     @article{ju2023fracture,
