--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -152,11 +152,12 @@
         <h2 class="title is-3">Splitting Strategy</h2>
         <div class="content has-text-justified">
           <p>
-          In our work[Ju et al. 2023], we first divide the GRAZPEDWRI-DX dataset ran- domly into three sets: training set, 
+          In our study [Ju et al. 2023], we first divided the GRAZPEDWRI-DX dataset randomly into three sets: training set, 
           validation set, and test set. The sizes of these sets are approximately 70%, 
           20%, and 10% of the original dataset, respectively. Specifically, our training 
           set consists of 14,204 images (69.88%), our validation set consists of 4,094 
           images (20.14%), and our test set consists of 2029 images (9.98%). 
+          In the later studies [Chien et al. 2024a][Chien et al. 2024b][Ju et al. 2024a][Ju et al. 2024b], we followed this dataset.
           </p>
         </div>
       </div>
