--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -156,8 +156,9 @@
           validation set, and test set. The sizes of these sets are approximately 70%, 
           20%, and 10% of the original dataset, respectively. Specifically, our training 
           set consists of 14,204 images (69.88%), our validation set consists of 4,094 
-          images (20.14%), and our test set consists of 2029 images (9.98%). 
-          In the later studies [Chien et al. 2024a][Chien et al. 2024b][Ju et al. 2024a][Ju et al. 2024b], we followed this dataset.
+          images (20.14%), and our test set consists of 2,029 images (9.98%). 
+          In the later studies [Chien et al. 2024a][Chien et al. 2024b][Ju et al. 2024a][Ju et al. 2024b], 
+          we followed to use this dataset.
           </p>
         </div>
       </div>
