--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -172,6 +172,9 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Application</h2>
         <div class="content has-text-centered">
+          <p>
+          You can access our web app  <a href="https://fracture-detection-yolo.streamlit.app/" target="_blank"><strong>here</strong></a>.
+          </p>
           <img src="./images/application.png" class="center">
         </div>
       </div>
