--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -173,7 +173,9 @@
         <h2 class="title is-3">Application</h2>
         <div class="content has-text-centered">
           <p>
-          You can access our web app  <a href="https://fracture-detection-yolo.streamlit.app/" target="_blank"><strong>here</strong></a>.
+          You can access our web application <a href="https://fracture-detection-yolo.streamlit.app/" target="_blank"><strong>here</strong></a>.
+          This website is hosted by Streamlit. In addition, we have also designed the Graphical User Interface, 
+            more information about this you can find <a href="https://github.com/RuiyangJu/Fracture-Detection-App" target="_blank"><strong>here</strong></a>.
           </p>
           <img src="./images/application.png" class="center">
         </div>
