--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -152,29 +152,27 @@
         <h2 class="title is-3">Splitting Strategy</h2>
         <div class="content has-text-justified">
           <p>
-          In our study [Ju et al. 2023], we first divided the GRAZPEDWRI-DX dataset randomly into three sets: training set, 
-          validation set, and test set. The sizes of these sets are approximately 70%, 
-          20%, and 10% of the original dataset, respectively. Specifically, our training 
-          set consists of 14,204 images (69.88%), our validation set consists of 4,094 
-          images (20.14%), and our test set consists of 2,029 images (9.98%). 
-          In the later studies [Chien et al. 2024a][Chien et al. 2024b][Ju et al. 2024a][Ju et al. 2024b], 
-          we followed to use this dataset.
+            In our study [Ju et al. 2023], we first divided the GRAZPEDWRI-DX dataset randomly into three sets: training set, 
+            validation set, and test set. The sizes of these sets are approximately 70%, 
+            20%, and 10% of the original dataset, respectively. Specifically, our training 
+            set consists of 14,204 images (69.88%), our validation set consists of 4,094 
+            images (20.14%), and our test set consists of 2,029 images (9.98%). 
+            In the later studies [Chien et al. 2024a][Chien et al. 2024b][Ju et al. 2024a][Ju et al. 2024b], 
+            we followed to use this dataset.
           </p>
         </div>
       </div>
     </div>
     <!--/ Splitting Strategy. -->
 
-<section class="section">
-  <div class="container is-max-desktop">
     <!-- Application. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Application</h2>
-        <div class="content has-text-centered">
+        <div class="content has-text-justified">
           <p>
-          You can access our web application <a href="https://fracture-detection-yolo.streamlit.app/" target="_blank"><strong>here</strong></a>.
-          This website is hosted by Streamlit. In addition, we have also designed the Graphical User Interface, 
+            You can access our web application <a href="https://fracture-detection-yolo.streamlit.app/" target="_blank"><strong>here</strong></a>.
+            This website is hosted by Streamlit. In addition, we have also designed the Graphical User Interface, 
             more information about this you can find <a href="https://github.com/RuiyangJu/Fracture-Detection-App" target="_blank"><strong>here</strong></a>.
           </p>
           <img src="./images/application.png" class="center">
@@ -182,14 +180,14 @@
       </div>
     </div>
     <!--/ Application. -->
+  </div>
+</section>
 
 <section class="section">
   <div class="container is-max-desktop">
-
     <div class="columns is-centered">
       <div class="column is-full-width">
         <h2 class="title is-3">Reference</h2>
-
         <!-- Prop. -->
         <div class="content has-text-justified">
           <p>
