--- a/GRAZPEDWRI-DX_JU/index.html
+++ b/GRAZPEDWRI-DX_JU/index.html
@@ -156,7 +156,7 @@
             20%, and 10% of the original dataset, respectively. Specifically, our training 
             set consists of 14,204 images (69.88%), our validation set consists of 4,094 
             images (20.14%), and our test set consists of 2,029 images (9.98%). 
-            In the later studies [Chien et al. 2024a][Chien et al. 2024b][Ju et al. 2024a][Ju et al. 2024b], 
+            In the later studies [Ju et al. 2024][Chien et al. 2024a][Chien et al. 2024b], 
             we all followed to use this dataset.
           </p>
         </div>
@@ -197,6 +197,17 @@
             [Ju et al. 2023] Rui-Yang Ju, Weiming Cai. 2023.
             Fracture detection in pediatric wrist trauma X-ray images using YOLOv8 algorithm. Scientific Reports.
           </p>
+            [Ju et al. 2024] Rui-Yang Ju, Chun-Tse Chien, Enkaer Xieerke, Jen-Shiun Chiang. 2024.
+            Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images. arXiv preprint.
+          </p>
+          <p>
+            [Chien et al. 2024a] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Jen-Shiun Chiang. 2024.
+            YOLOv9 for fracture detection in pediatric wrist trauma X-ray images. Electronics Letters.
+          </p>
+          <p>
+            [Chien et al. 2024b] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Enkaer Xieerke, Jen-Shiun Chiang. 2024.
+            YOLOv8-AM: YOLOv8 Based on Effective Attention Mechanisms for Pediatric Wrist Fracture Detection. arXiv preprint.
+          </p>
         </div>
       </div>
     </div>
@@ -216,36 +227,29 @@
     year={2023}
   }
     
-    @article{chien2024yolov9,
-      title={YOLOv9 for fracture detection in pediatric wrist trauma X-ray images},
-      author={Chien, Chun-Tse and Ju, Rui-Yang and Chou, Kuang-Yi and Chiang, Jen-Shiun},
-      journal={Electronics Letters},
-      volume={60},
-      number={11},
-      pages={e13248},
-      year={2024}
-    }
+  @article{chien2024yolov9,
+    title={YOLOv9 for fracture detection in pediatric wrist trauma X-ray images},
+    author={Chien, Chun-Tse and Ju, Rui-Yang and Chou, Kuang-Yi and Chiang, Jen-Shiun},
+    journal={Electronics Letters},
+    volume={60},
+    number={11},
+    pages={e13248},
+    year={2024}
+  }
 
-    @article{chien2024yolov8,
-      title={Yolov8-am: Yolov8 with attention mechanisms for pediatric wrist fracture detection},
-      author={Chien, Chun-Tse and Ju, Rui-Yang and Chou, Kuang-Yi and Lin, Chien-Sheng and Chiang, Jen-Shiun},
-      journal={arXiv preprint arXiv:2402.09329},
-      year={2024}
-    }
+  @article{chien2024yolov8,
+    title={YOLOv8-AM: YOLOv8 Based on Effective Attention Mechanisms for Pediatric Wrist Fracture Detection}, 
+    author={Chien, Chun-Tse and Ju, Rui-Yang and Chou, Kuang-Yi and Xieerke, Enkaer and Chiang, Jen-Shiun},
+    journal={arXiv preprint arXiv:2402.09329},
+    year={2024}
+  }
 
-    @article{ju2024yolov8,
-      title={Yolov8-rescbam: Yolov8 based on an effective attention module for pediatric wrist fracture detection},
-      author={Ju, Rui-Yang and Chien, Chun-Tse and Chiang, Jen-Shiun},
-      journal={arXiv preprint arXiv:2409.18826},
-      year={2024}
-    }
-
-    @article{ju2024pediatric,
-      title={Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images},
-      author={Ju, Rui-Yang and Chien, Chun-Tse and Xieerke, Enkaer and Chiang, Jen-Shiun},
-      journal={arXiv preprint arXiv:2410.01031},
-      year={2024}
-    }
+  @article{ju2024pediatric,
+    title={Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images},
+    author={Ju, Rui-Yang and Chien, Chun-Tse and Xieerke, Enkaer and Chiang, Jen-Shiun},
+    journal={arXiv preprint arXiv:2410.01031},
+    year={2024}
+  }
     </code></pre>
   </div>
 </section>
