--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="GRAZPEDWRI-DX Dataset (Split By Ju)">
-  <meta name="keywords" content="GRAZPEDWRI-DX, Dataset, Ju">
+        content="ToonifyGB: ToonifyGB: StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars">
+  <meta name="keywords" content="ToonifyGB, StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars, Rui-Yang Ju">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>GRAZPEDWRI-DX Dataset (Split By Ju)</title>
+  <title>ToonifyGB: ToonifyGB: StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
