--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -62,6 +62,8 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://ruiyangju.github.io/">Rui-Yang Ju</a>
+              Sheng-Yen Huang
+              <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a>
             </span>
           </div>
 
