--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -68,7 +68,7 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block">National Taiwan University</span>
+            <span class="author-block">Graduate Institute of Networking and Multimedia, National Taiwan University</span>
           </div>
 
           <div class="column has-text-centered">
