--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -58,17 +58,20 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title" style="font-weight: 600;">ToonifyGB: StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars</h1>
+          <h1 class="title is-2 publication-title" style="font-weight: 600;">ToonifyGB: StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://ruiyangju.github.io/">Rui-Yang Ju</a>
-              Sheng-Yen Huang
+              <a href="https://ruiyangju.github.io/" style="margin-right: 20px;">Rui-Yang Ju</a>
+              <span style="margin-right: 20px;">Sheng-Yen Huang</span>
               <a href="https://www.csie.ntu.edu.tw/~hung/index.html#about">Yi-Ping Hung</a>
             </span>
           </div>
 
-          <div class="is-size-5 publication-authors">
-            <span class="author-block">Graduate Institute of Networking and Multimedia, National Taiwan University</span>
+          <div class="is-size-6 publication-authors">
+            <span class="author-block">
+              Graduate Institute of Networking and Multimedia<br>
+              National Taiwan University
+            </span>
           </div>
 
           <div class="column has-text-centered">
