--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -67,7 +67,7 @@
             </span>
           </div>
 
-          <div class="is-size-6 publication-authors">
+          <div class="is-size-6 publication-authors" style="margin-top: 1em;">
             <span class="author-block">
               Graduate Institute of Networking and Multimedia<br>
               National Taiwan University
