--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -97,22 +97,12 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/RuiyangJu/Bone_Fracture_Detection_YOLOv8"
+                <a href="https://github.com/RuiyangJu/ToonifyGB"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
                   <span>Code</span>
-                  </a>
-              </span>
-              <!-- Dataset Link. -->
-              <span class="link-block">
-                <a href="https://1drv.ms/u/s!Ap6uuRvdVcJWbXtfIFYUvzOMKXQ"
-                   class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                      <i class="fas fa-download"></i>
-                  </span>
-                  <span>Dataset</span>
                   </a>
               </span>
             </div>
