--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -121,9 +121,10 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <div class="content has-text-centered">
-          <img src="./images/intro.png" class="center">
+          <img src="./images/teaser.png" class="center">
           <h5 class="subtitle has-text-centered" style="margin-top: 15px">
-            The left side is the original X-ray image and the right side is the image from the expert's manual labelling.
+            We propose an efficient two-stage framework that employs an improved StyleGAN to generate stylized head videos from input video frames and synthesize the corresponding 3D avatars using Gaussian blendshapes. 
+            Our method supports real-time synthesis of stylized avatar animations in styles such as Arcane and Pixar.
           </h5>
         </div>
         <h2 class="title is-3">Original Dataset</h2>
