--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -117,7 +117,6 @@
 
 <section class="section">
   <div class="container is-max-desktop">
-    <!-- Original Dataset. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <div class="content has-text-centered">
@@ -127,22 +126,22 @@
             Our method supports real-time synthesis of stylized avatar animations in styles such as Arcane and Pixar.
           </h5>
         </div>
-        <h2 class="title is-3">Original Dataset</h2>
+        <h2 class="title is-3" style="margin-top: 3em;">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            GRAZPEDWRI-DX [Nagy et al. 2022] is a public dataset of 20,327 pediatric wrist 
-            trauma X-ray images released by the University of Medicine of Graz. 
-            These X-ray images were collected by multiple pediatric radiologists 
-            at the Department for Pediatric Surgery of the University Hospital Graz 
-            between 2008 and 2018, involving 6,091 patients and a total of 10,643 
-            studies. This dataset is annotated with 74,459 image labels, featuring 
-            a total of 67,771 labeled objects. You can find the original GRAZPEDWRI-DX dataset 
+          The introduction of 3D Gaussian blendshapes has enabled the real-time reconstruction of animatable head avatars from monocular video. 
+          Toonify, a StyleGAN-based method, has become widely used for facial image stylization.
+          To extend Toonify for synthesizing diverse stylized 3D head avatars using Gaussian blendshapes, we propose an efficient two-stage framework, ToonifyGB.
+          In Stage 1 (stylized video generation), we adopt an improved StyleGAN to generate the stylized video from the input video frames, which overcomes the limitation of cropping aligned faces at a fixed resolution as preprocessing for normal StyleGAN.
+          This process provides a more stable stylized video, which enables Gaussian blendshapes to better capture the high-frequency details of the video frames, facilitating the synthesis of high-quality animations in the next stage.
+          In Stage 2 (Gaussian blendshapes synthesis), our method learns a stylized neutral head model and a set of expression blendshapes from the generated stylized video.
+          By combining the neutral head model with expression blendshapes, ToonifyGB can efficiently render stylized avatars with arbitrary expressions. 
+          We validate the effectiveness of ToonifyGB on benchmark datasets using two representative styles: Arcane and Pixar.
             <a href="https://figshare.com/articles/dataset/GRAZPEDWRI-DX/14825193" target="_blank"><strong>here</strong></a> (unsplit).
           </p>
         </div>
       </div>
     </div>
-    <!--/ Original Dataset. -->
 
     <!-- Splitting Strategy. -->
     <div class="columns is-centered has-text-centered">
