--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -143,10 +143,9 @@
       </div>
     </div>
 
-    <!-- Splitting Strategy. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Splitting Strategy</h2>
+        <h2 class="title is-3" style="margin-top: 3em;">Live Demo</h2>
         <div class="content has-text-justified">
           <p>
             In our study [Ju et al. 2023], we first divided the GRAZPEDWRI-DX dataset randomly into three sets: training set, 
@@ -160,7 +159,6 @@
         </div>
       </div>
     </div>
-    <!--/ Splitting Strategy. -->
 
     <!-- Application. -->
     <div class="columns is-centered has-text-centered">
