--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -159,21 +159,19 @@
       </div>
     </div>
 
-    <!-- Application. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Application</h2>
+        <h2 class="title is-3" style="margin-top: 3em;">Pipeline</h2>
         <div class="content has-text-justified">
+        <img src="./images/pipeline.png" class="center">
           <p>
             You can access our web application <a href="https://fracture-detection-yolo.streamlit.app/" target="_blank"><strong>here</strong></a>.
             This website is hosted by Streamlit. In addition, we have also designed the Graphical User Interface, 
             more information about this you can find <a href="https://github.com/RuiyangJu/Fracture-Detection-App" target="_blank"><strong>here</strong></a>.
           </p>
-          <img src="./images/application.png" class="center">
         </div>
       </div>
     </div>
-    <!--/ Application. -->
   </div>
 </section>
 
