--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -165,9 +165,7 @@
         <div class="content has-text-justified">
         <img src="./images/pipeline.png" class="center">
           <p>
-            You can access our web application <a href="https://fracture-detection-yolo.streamlit.app/" target="_blank"><strong>here</strong></a>.
-            This website is hosted by Streamlit. In addition, we have also designed the Graphical User Interface, 
-            more information about this you can find <a href="https://github.com/RuiyangJu/Fracture-Detection-App" target="_blank"><strong>here</strong></a>.
+          Our ToonifyGB framework consists of two stages: Stage 1 involves the generation of stylized videos, and Stage 2 focuses on the synthesis of 3D stylized head avatars using Gaussian blendshapes.
           </p>
         </div>
       </div>
