--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -146,6 +146,9 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3" style="margin-top: 2em;">Live Demo</h2>
         <div class="content has-text-justified">
+          <video id="replay-video" controls="" muted="" preload="" playsinline="" loop="" width="80%">
+            <source src="./video/Live Demo.mp4" type="video/mp4">
+          </video>
         </div>
       </div>
     </div>
