--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -199,45 +199,13 @@
 
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <strong>If you use our split dataset, please cite some of the papers below:</strong>
-    
     <pre><code>
-  @article{ju2023fracture,
-    title={Fracture detection in pediatric wrist trauma X-ray images using YOLOv8 algorithm},
-    author={Ju, Rui-Yang and Cai, Weiming},
-    journal={Scientific Reports},
-    volume={13},
-    number={1},
-    pages={20077},
-    year={2023}
-  }
-    
-  @article{chien2024yolov9,
-    title={YOLOv9 for fracture detection in pediatric wrist trauma X-ray images},
-    author={Chien, Chun-Tse and Ju, Rui-Yang and Chou, Kuang-Yi and Chiang, Jen-Shiun},
-    journal={Electronics Letters},
-    volume={60},
-    number={11},
-    pages={e13248},
-    year={2024}
-  }
-
-  @article{chien2025yolov8,
-    title={YOLOv8-AM: YOLOv8 Based on Effective Attention Mechanisms for Pediatric Wrist Fracture Detection},
-    author={Chien, Chun-Tse and Ju, Rui-Yang and Chou, Kuang-Yi and Xieerke, Enkaer and Chiang, Jen-Shiun},
-    journal={IEEE Access},
-    volume={13},
-    pages={52461-52477},
-    year={2025},
-    publisher={IEEE}
-  }
-
-  @article{ju2024pediatric,
-    title={Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images},
-    author={Ju, Rui-Yang and Chien, Chun-Tse and Xieerke, Enkaer and Chiang, Jen-Shiun},
-    journal={arXiv preprint arXiv:2410.01031},
-    year={2024}
-  }
+    @article{ju2025toonifygb,
+      title={ToonifyGB: StyleGAN-based Gaussian Blendshapes for 3D Stylized Head Avatars},
+      author={Ju, Rui-Yang and Huang, Sheng-Yen and Hung, Yi-Ping},
+      journal={arXiv preprint arXiv:2505.10072},
+      year={2025}
+    }
     </code></pre>
   </div>
 </section>
