--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -146,7 +146,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3" style="margin-top: 2em;">Live Demo</h2>
         <div class="content has-text-justified">
-          <video id="replay-video" controls="" muted="" preload="" playsinline="" loop="" width="80%">
+          <video id="replay-video" controls muted preload playsinline loop style="display: block; margin: 0 auto; width: 80%;">
             <source src="./video/Live Demo.mp4" type="video/mp4">
           </video>
         </div>
@@ -168,35 +168,6 @@
 </section>
 
 <section class="section">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered">
-      <div class="column is-full-width">
-        <h2 class="title is-3">Reference</h2>
-        <!-- Prop. -->
-        <div class="content has-text-justified">
-          <p>
-            [Nagy et al. 2022] Eszter Nagy, Michael Janisch, Franko Hržić, Erich Sorantin, Sebastian Tschauner. 2022.
-            A pediatric wrist trauma X-ray dataset (GRAZPEDWRI-DX) for machine learning. Scientific Data.
-          </p>
-          <p>
-            [Ju et al. 2023] Rui-Yang Ju, Weiming Cai. 2023.
-            Fracture detection in pediatric wrist trauma X-ray images using YOLOv8 algorithm. Scientific Reports.
-          </p>
-            [Ju et al. 2024] Rui-Yang Ju, Chun-Tse Chien, Enkaer Xieerke, Jen-Shiun Chiang. 2024.
-            Pediatric Wrist Fracture Detection Using Feature Context Excitation Modules in X-ray Images. arXiv preprint.
-          </p>
-          <p>
-            [Chien et al. 2024a] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Jen-Shiun Chiang. 2024.
-            YOLOv9 for fracture detection in pediatric wrist trauma X-ray images. Electronics Letters.
-          </p>
-          <p>
-            [Chien et al. 2024b] Chun-Tse Chien, Rui-Yang Ju, Kuang-Yi Chou, Enkaer Xieerke, Jen-Shiun Chiang. 2024.
-            YOLOv8-AM: YOLOv8 Based on Effective Attention Mechanisms for Pediatric Wrist Fracture Detection. arXiv preprint.
-          </p>
-        </div>
-      </div>
-    </div>
-
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>
