--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -157,7 +157,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3" style="margin-top: 2em;">Pipeline</h2>
         <div class="content has-text-justified">
-        <img src="./images/pipeline.png" class="center">
+        <img src="./images/pipeline.png" class="center" style="width: 80%;">
           <p>
           Our ToonifyGB framework consists of two stages: Stage 1 involves the generation of stylized videos, and Stage 2 focuses on the synthesis of 3D stylized head avatars using Gaussian blendshapes.
           </p>
