--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -164,6 +164,19 @@
         </div>
       </div>
     </div>
+
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3" style="margin-top: 2em;">Comparison</h2>
+        <div class="content has-text-justified">
+        <img src="./images/qualitative.png" class="center" style="width: 80%;">
+          <p>
+          Our ToonifyGB framework consists of two stages: Stage 1 involves the generation of stylized videos, and Stage 2 focuses on the synthesis of 3D stylized head avatars using Gaussian blendshapes.
+          </p>
+        </div>
+      </div>
+    </div>
+    
   </div>
 </section>
 
