--- a/ToonifyGB/index.html
+++ b/ToonifyGB/index.html
@@ -186,7 +186,7 @@
   </div>
 </section>
 
-<section class="section">
+<section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>
@@ -199,7 +199,7 @@
     </code></pre>
   </div>
 </section>
-
+  
 <footer class="footer">
   <div class="container">
     <div class="columns is-centered">
