--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="GRAZPEDWRI-DX Dataset (Split By Ju)">
-  <meta name="keywords" content="GRAZPEDWRI-DX, Dataset, Ju">
+        content="DKDS Dataset">
+  <meta name="keywords" content="DKDS, Degraded Kuzushiji Documents with Seals Dataset, Ju">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>GRAZPEDWRI-DX Dataset (Split By Ju)</title>
+  <title>DKDS: A Benchmark Dataset of Degraded Kuzushiji Documents with Seals for Detection and Binarization</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
