--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="DKDS Dataset">
-  <meta name="keywords" content="DKDS, Degraded Kuzushiji Documents with Seals Dataset, Ju">
+        content="DKDS: A Benchmark Dataset of Degraded Kuzushiji Documents with Seals for Detection and Binarization">
+  <meta name="keywords" content="DKDS, Degraded Kuzushiji Documents with Seals Dataset, Rui-Yang Ju">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>DKDS: A Benchmark Dataset of Degraded Kuzushiji Documents with Seals for Detection and Binarization</title>
 
