--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -69,7 +69,7 @@
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block">National Taiwan University</span>
+            <span class="author-block">Kyoto University</span>
           </div>
 
           <div class="column has-text-centered">
