--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -58,7 +58,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title" style="font-weight: 600;">GRAZPEDWRI-DX Dataset (Split By Ju)</h1>
+          <h1 class="title is-3 publication-title" style="font-weight: 600;">DKDS: A Benchmark Dataset of Degraded Kuzushiji Documents with Seals for Detection and Binarization</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://ruiyangju.github.io/" style="margin-right: 20px;">Rui-Yang Ju</a>
