--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -129,7 +129,7 @@
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <div class="content has-text-centered">
-          <img src="./images/intro.png" class="center">
+          <img src="./images/teaser.png" class="center">
           <h5 class="subtitle has-text-centered" style="margin-top: 15px">
             The left side is the original X-ray image and the right side is the image from the expert's manual labelling.
           </h5>
