--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -131,7 +131,7 @@
         <div class="content has-text-centered">
           <img src="./images/teaser.png" class="center">
           <h5 class="subtitle has-text-centered" style="margin-top: 15px">
-            The left side is the original X-ray image and the right side is the image from the expert's manual labelling.
+            DKDS dataset is the first collection of degraded ancient Japanese document images specifically designed to address the challenge of Kuzushiji characters overlapping with seals. Based on the dataset, we define two benchmark tracks: Text and Seal Detection and Document Binarization.
           </h5>
         </div>
         <h2 class="title is-3">Original Dataset</h2>
