--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -135,6 +135,7 @@
         </div>
         <h2 class="title is-3">Motivation</h2>
         <div class="content has-text-justified">
+          <img src="./images/motivation.png" class="center">
           <p>
             Within ancient Japanese documents, seals appear as red marks that frequently overlap with Kuzushiji characters.
             This overlap can blur character boundaries and significantly reduce OCR accuracy. 
