--- a/DKDS/index.html
+++ b/DKDS/index.html
@@ -145,28 +145,29 @@
         </div>
       </div>
     </div>
-    <!--/ Original Dataset. -->
 
-    <!-- Splitting Strategy. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
-        <h2 class="title is-3">Splitting Strategy</h2>
+        <h2 class="title is-3">Challenge</h2>
+        <h2 class="title is-5">Track 1: Text and Seal Detection</h2>
         <div class="content has-text-justified">
+          <img src="./images/challenge1.png" class="center">
           <p>
-            In our study [Ju et al. 2023], we first divided the GRAZPEDWRI-DX dataset randomly into three sets: training set, 
-            validation set, and test set. The sizes of these sets are approximately 70%, 
-            20%, and 10% of the original dataset, respectively. Specifically, our training 
-            set consists of 14,204 images (69.88%), our validation set consists of 4,094 
-            images (20.14%), and our test set consists of 2,029 images (9.98%). 
-            In the later studies [Ju et al. 2024][Chien et al. 2024a][Chien et al. 2024b], 
-            we all followed to use this dataset.
+            Challenging examples for the text and seal detection task: 
+            The first row presents seals with faint ink, while the second row shows seals overlapping with Kuzushiji characters or with other seals.
+          </p>
+        </div>
+        <h2 class="title is-5">Track 2: Document Binarization</h2>
+        <div class="content has-text-justified">
+          <img src="./images/challenge2.png" class="center">
+          <p>
+            Challenging examples for the document binarization task: 
+            The left column shows the original images, while the right column presents the corresponding binarized images.
           </p>
         </div>
       </div>
     </div>
-    <!--/ Splitting Strategy. -->
 
-    <!-- Application. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
         <h2 class="title is-3">Application</h2>
